# mcp

./: Dockerfile  cfn_gitops_agent.py  pyproject.toml  uv-requirements.txt
cfn-template-manager-mcp-server/: ARCHITECTURE_DIAGRAM.md  CODE_ARCHITECTURE.md  Dockerfile  PRIVATE_REPO_GUIDE.md  QUICK_REFERENCE.md  README.md  pyproject.toml
cfn-template-manager-mcp-server/awslabs/cfn_template_manager/: __init__.py  server.py  tools.py
